pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-tls-section-and-invalid-proxy-ssl-secret.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-tls-section-and-invalid-proxy-ssl-secret
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "malformed-secret-reference"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - invalid-transport.whoami.localhost
      secretName: whoami-tls
  rules:
    - host: invalid-transport.whoami.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
